mock json data connected

--- a/index.html
+++ b/index.html
@@ -1,194 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Home</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<link rel="stylesheet" href="css/basic.css"/>
-		<link
-			rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-			crossorigin="anonymous"
+    <head>
+        <title>Home</title>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        
-		<style>
-			.big-font {
-				font-size: 70px;
-				font-weight: 900;
-			}
-			.medium-font {
-				font-size: 48px;
-				font-weight: 500;
-			}
-			.tag-font {
-				font-weight: 400;
-				font-size: 20px;
-			}
-			.big-button {
-				padding: 15px 120px;
-				font-size: 23px;
-				font-weight: 500;
-			}
-		</style>
-		<link rel="stylesheet" href="css/basic.css"/>
-	</head>
-	<body>
+        <link rel="stylesheet" href="css/basic.css" />
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="fixed-top navbar-collapse justify-content-end pb-4 pb-md-0" id="navbar">
-                <a  href="index.html" class="navbar-brand font-weight-bold mr-auto font-heading-custom">Medium Clone</a>
-                <ul class="nav navbar-nav  mt-2 mt-lg-0">
+        <style>
+            .big-font {
+                font-size: 70px;
+                font-weight: 900;
+            }
+            .medium-font {
+                font-size: 48px;
+                font-weight: 500;
+            }
+            .tag-font {
+                font-weight: 400;
+                font-size: 20px;
+            }
+            .big-button {
+                padding: 15px 120px;
+                font-size: 23px;
+                font-weight: 500;
+            }
+        </style>
+        <link rel="stylesheet" href="css/basic.css" />
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div
+                class="fixed-top navbar-collapse justify-content-end pb-4 pb-md-0"
+                id="navbar"
+            >
+                <a
+                    href="index.html"
+                    class="navbar-brand font-weight-bold mr-auto font-heading-custom"
+                    >Medium Clone</a
+                >
+                <ul class="nav navbar-nav mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-dark mr-3" href="writeBlog.html">Write</a>
+                        <a class="nav-link text-dark mr-3" href="writeBlog.html"
+                            >Write</a
+                        >
                     </li>
                     <li class="d-flex align-items-baseline" id="navbarRight">
-                        <a class="nav-link text-dark mr-4" href="loginRegistration.html">Sign in</a>
-                        <a class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0" href="loginRegistration.html">Get Started</a>
+                        <a
+                            class="nav-link text-dark mr-4"
+                            href="loginRegistration.html"
+                            >Sign in</a
+                        >
+                        <a
+                            class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0"
+                            href="loginRegistration.html"
+                            >Get Started</a
+                        >
                     </li>
                 </ul>
             </div>
         </nav>
-		
-		<div class="container">
-			<div id="dummyDivForMargin"></div>
-			<h1 class="font-heading-custom text-dark-custom text-center big-font">Dive deeper on topics that<br> matter to you.</h1>
-			<h2 class="font-text-custom text-dark-custom text-center medium-font">Select what you're into We'll help you find<br> great things to read.</h2>
-			<div class="m-3 d-flex tag-font flex-wrap justify-content-center" id="tags">
-				<div class="rounded-pill background-light-custom d-flex px-3 py-2 m-2 align-items-center" >
-					<div class="rounded-circle background-dark-custom text-white px-2">
-						#
-					</div>
-					<div class="ml-2">
-						<a class="text-light-custom remove-link-format" href="topicBlogs.html">Technology</a>
-					</div>
-				</div>
-				<div class="rounded-pill background-light-custom d-flex text-light-custom px-3 py-2 m-2 align-items-center">
-					<div class="rounded-circle background-dark-custom text-white px-2">
-						#
-					</div>
-					<div class="ml-2">
-						Technology
-					</div>
-				</div>
-				<div class="rounded-pill background-light-custom d-flex text-light-custom px-3 py-2 m-2 align-items-center">
-					<div class="rounded-circle background-dark-custom text-white px-2">
-						#
-					</div>
-					<div class="ml-2">
-						Technology
-					</div>
-				</div>
-				<div class="rounded-pill background-light-custom d-flex text-light-custom px-3 py-2 m-2 align-items-center">
-					<div class="rounded-circle background-dark-custom text-white px-2">
-						#
-					</div>
-					<div class="ml-2">
-						Cryptocurrencies
-					</div>
-				</div>
-				<div class="rounded-pill background-light-custom d-flex text-light-custom px-3 py-2 m-2 align-items-center">
-					<div class="rounded-circle background-dark-custom text-white px-2">
-						#
-					</div>
-					<div class="ml-2">
-						Technology
-					</div>
-				</div>
-				<div class="rounded-pill background-light-custom d-flex text-light-custom px-3 py-2 m-2 align-items-center">
-					<div class="rounded-circle background-dark-custom text-white px-2">
-						#
-					</div>
-					<div class="ml-2">
-						self
-					</div>
-				</div>
-				<div class="rounded-pill background-light-custom d-flex text-light-custom px-3 py-2 m-2 align-items-center">
-					<div class="rounded-circle background-dark-custom text-white px-2">
-						#
-					</div>
-					<div class="ml-2">
-						Technology
-					</div>
-				</div>
-				<div class="rounded-pill background-light-custom d-flex text-light-custom px-3 py-2 m-2 align-items-center">
-					<div class="rounded-circle background-dark-custom text-white px-2">
-						#
-					</div>
-					<div class="ml-2">
-						Technology
-					</div>
-				</div>
-				<div class="rounded-pill background-light-custom d-flex text-light-custom px-3 py-2 m-2 align-items-center">
-					<div class="rounded-circle background-dark-custom text-white px-2">
-						#
-					</div>
-					<div class="ml-2">
-						Culture
-					</div>
-				</div>
-				<div class="rounded-pill background-light-custom d-flex text-light-custom px-3 py-2 m-2 align-items-center">
-					<div class="rounded-circle background-dark-custom text-white px-2">
-						#
-					</div>
-					<div class="ml-2">
-						Artificial Intelligence
-					</div>
-				</div>
-			</div>
-			<div class="text-center my-5">
-				<div class="btn btn-lg big-button text-white background-success-custom align-center">Get Started</div>
-				<div class="mt-3">
-					Already have an account?
-				</div>
-				<div>
-					sign in.
-				</div>
-			</div>
-			<h1 class="font-heading-custom text-dark-custom big-font">
-				No ads. No problems.
-			</h1>
-			<h4 class="font-text-custom text-light-custom">
-				Your privacy stays yours. We don't sell your data or target you with ads.Ever.
-			</h4>
-			<div class="row my-4 d-flex">
-				<div class="col-12 col-md-6 align-self-end">
-					<div class="btn btn-lg big-button text-white background-success-custom align-center">Get Started</div>
-				</div>
-				<div class="col-12 col-md-6">
-					<h4 class="font-text-custom my-3 text-dark-custom">
-						We do think different
-					</h4>
-					<h4 class="font-text-custom text-light-custom">
-						Medium is not like any other platform on the internet. Our sole purpose is to help you find compelling ideas, knowledge, and perspectives. We
-						don’t serve ads—we serve you, the curious reader who loves to learn new things. Medium is home to thousands of independent voices, and we
-						combine humans and technology to find the best reading for you—and filter out the rest.
-					</h4>
-				</div>
-			</div>
-			<h1 class="font-heading-custom text-dark-custom text-center big-font my-5">
-                Expand your reading.<br>
-                Expand your mind. <br>
-                <div class="btn btn-lg big-button text-white background-success-custom align-center my-5">Get Started</div>
+
+        <div class="container">
+            <div id="dummyDivForMargin"></div>
+            <h1
+                class="font-heading-custom text-dark-custom text-center big-font"
+            >
+                Dive deeper on topics that<br />
+                matter to you.
             </h1>
-		</div>
+            <h2
+                class="font-text-custom text-dark-custom text-center medium-font"
+            >
+                Select what you're into We'll help you find<br />
+                great things to read.
+            </h2>
+            <div
+                class="m-3 d-flex tag-font flex-wrap justify-content-center"
+                id="tags"
+            ></div>
+            <div class="text-center my-5">
+                <a
+                    href="loginRegistration.html"
+                    class="btn btn-lg big-button text-white background-success-custom align-center"
+                >
+                    Get Started
+                </a>
+                <div class="mt-3">Already have an account?</div>
+                <div>sign in.</div>
+            </div>
+            <h1 class="font-heading-custom text-dark-custom big-font">
+                No ads. No problems.
+            </h1>
+            <h4 class="font-text-custom text-light-custom">
+                Your privacy stays yours. We don't sell your data or target you
+                with ads.Ever.
+            </h4>
+            <div class="row my-4 d-flex">
+                <div class="col-12 col-md-6 align-self-end">
+                    <a
+                        href="loginRegistration.html"
+                        class="btn btn-lg big-button text-white background-success-custom align-center"
+                    >
+                        Get Started
+                    </a>
+                </div>
+                <div class="col-12 col-md-6">
+                    <h4 class="font-text-custom my-3 text-dark-custom">
+                        We do think different
+                    </h4>
+                    <h4 class="font-text-custom text-light-custom">
+                        Medium is not like any other platform on the internet.
+                        Our sole purpose is to help you find compelling ideas,
+                        knowledge, and perspectives. We don’t serve ads—we serve
+                        you, the curious reader who loves to learn new things.
+                        Medium is home to thousands of independent voices, and
+                        we combine humans and technology to find the best
+                        reading for you—and filter out the rest.
+                    </h4>
+                </div>
+            </div>
+            <h1
+                class="font-heading-custom text-dark-custom text-center big-font my-5"
+            >
+                Expand your reading.<br />
+                Expand your mind. <br />
+                <a
+                    href="loginRegistration.html"
+                    class="btn btn-lg big-button text-white background-success-custom align-center my-5"
+                >
+                    Get Started
+                </a>
+            </h1>
+        </div>
         <div class="p-5 background-black-custom"></div>
         <script type="module" src="js/index.js"></script>
-		<script
-			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-			crossorigin="anonymous"
-		></script>
-	</body>
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
