--- a/topicBlogs.html
+++ b/topicBlogs.html
@@ -1,136 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Topics</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<link rel="stylesheet" href="css/basic.css" />
-		<link
-			rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-			crossorigin="anonymous"
+    <head>
+        <title>Topics</title>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	</head>
-	<body>
+        <link rel="stylesheet" href="css/basic.css" />
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+    </head>
+    <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="fixed-top navbar-collapse justify-content-end pb-4 pb-md-0" id="navbar">
-                <a  href="index.html" class="navbar-brand font-weight-bold mr-auto font-heading-custom">Medium Clone</a>
-                <ul class="nav navbar-nav  mt-2 mt-lg-0">
+            <div
+                class="fixed-top navbar-collapse justify-content-end pb-4 pb-md-0"
+                id="navbar"
+            >
+                <a
+                    href="index.html"
+                    class="navbar-brand font-weight-bold mr-auto font-heading-custom"
+                    >Medium Clone</a
+                >
+                <ul class="nav navbar-nav mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-dark mr-3" href="writeBlog.html">Write</a>
+                        <a class="nav-link text-dark mr-3" href="writeBlog.html"
+                            >Write</a
+                        >
                     </li>
                     <li class="d-flex align-items-baseline" id="navbarRight">
-                        <a class="nav-link text-dark mr-4" href="loginRegistration.html">Sign in</a>
-                        <a class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0" href="loginRegistration.html">Get Started</a>
+                        <a
+                            class="nav-link text-dark mr-4"
+                            href="loginRegistration.html"
+                            >Sign in</a
+                        >
+                        <a
+                            class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0"
+                            href="loginRegistration.html"
+                            >Get Started</a
+                        >
                     </li>
                 </ul>
             </div>
         </nav>
-        
+
         <div id="dummyDivForMargin"></div>
-		<div class="container">
+        <div class="container">
             <div class="row my-3">
                 <div class="col-12 col-md-8 order-2 order-md-1">
                     <h5 class="text-dark-custom">Latest</h5>
-                    <hr class="text-light-custom my-1">
-                    <div id="articles">
-                    <div class="border-bottom m-2">
-                        <h3>Seeking a less-burdensome treatment for Diamond Blackfan anemia</h3>
-                        <div class="my-3 d-flex align-items-center">
-                            <i class="fa fa-user-circle ml-1 mr-3" style="font-size: 40px;" aria-hidden="true"></i>
-                            <div>
-                                <div class="text-light-custom">
-                                    By Molly Longman
-                                </div>
-                                <div class="small text-light-custom">
-                                    jul 15
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="border-bottom m-2">
-                        <h3>Seeking a less-burdensome treatment for Diamond Blackfan anemia</h3>
-                        <div class="my-3 d-flex align-items-center">
-                            <i class="fa fa-user-circle ml-1 mr-3" style="font-size: 40px;" aria-hidden="true"></i>
-                            <div>
-                                <div class="text-light-custom">
-                                    By Molly Longman
-                                </div>
-                                <div class="small text-light-custom">
-                                    jul 15
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="border-bottom m-2">
-                        <h3>Seeking a less-burdensome treatment for Diamond Blackfan anemia</h3>
-                        <div class="my-3 d-flex align-items-center">
-                            <i class="fa fa-user-circle ml-1 mr-3" style="font-size: 40px;" aria-hidden="true"></i>
-                            <div>
-                                <div class="text-light-custom">
-                                    By Molly Longman
-                                </div>
-                                <div class="small text-light-custom">
-                                    jul 15
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="border-bottom m-2">
-                        <h3>Seeking a less-burdensome treatment for Diamond Blackfan anemia</h3>
-                        <div class="my-3 d-flex align-items-center">
-                            <i class="fa fa-user-circle ml-1 mr-3" style="font-size: 40px;" aria-hidden="true"></i>
-                            <div>
-                                <div class="text-light-custom">
-                                    By Molly Longman
-                                </div>
-                                <div class="small text-light-custom">
-                                    jul 15
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="border-bottom m-2">
-                        <h3>Seeking a less-burdensome treatment for Diamond Blackfan anemia</h3>
-                        <div class="my-3 d-flex align-items-center">
-                            <i class="fa fa-user-circle ml-1 mr-3" style="font-size: 40px;" aria-hidden="true"></i>
-                            <div>
-                                <div class="text-light-custom">
-                                    By Molly Longman
-                                </div>
-                                <div class="small text-light-custom">
-                                    jul 15
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    </div>
+                    <hr class="text-light-custom my-1" />
+                    <div id="articles"></div>
                 </div>
                 <div class="col-12 col-md-4 order-1 order-md-2">
-                    <h2 id="topicHead">
-                        Health Stories 
-                    </h2>
+                    <h2 id="topicHead">Health Stories</h2>
                 </div>
             </div>
         </div>
         <div class="p-5 background-black-custom"></div>
         <script src="js/topicBlogs.js" type="module"></script>
-		<script
-			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-			crossorigin="anonymous"
-		></script>
-	</body>
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
