--- a/writeBlog.html
+++ b/writeBlog.html
@@ -1,116 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Write Blog</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link href="css/basic.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .input-title {
-            width: 100%;
-            height: 70px;
-            font-size: 40px;
-            border:none;
-            outline: none;
-            padding-left: 10px;
-            color: #292929;
-            font-family: 'Times New Roman', Times, serif;
-        }
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Write Blog</title>
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+            crossorigin="anonymous"
+        />
+        <link href="css/basic.css" rel="stylesheet" />
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+        <style>
+            .input-title {
+                width: 100%;
+                height: 70px;
+                font-size: 40px;
+                border: none;
+                outline: none;
+                padding-left: 10px;
+                color: #292929;
+                font-family: "Times New Roman", Times, serif;
+            }
 
-        .input-body {
-            width: 100%;
-            height: 500px;
-            font-size: 23px;
-            border:none;
-            outline: none;
-            padding-left: 10px;
-            color: #292929;
-            font-family: 'Times New Roman', Times, serif;
-        }
+            .input-body {
+                width: 100%;
+                height: 500px;
+                font-size: 23px;
+                border: none;
+                outline: none;
+                padding-left: 10px;
+                color: #292929;
+                font-family: "Times New Roman", Times, serif;
+            }
 
-        ::placeholder {
-            color: #7d7976
-        }
-    </style>
-</head>
+            ::placeholder {
+                color: #7d7976;
+            }
+        </style>
+    </head>
 
-<body>
-
-
-    <div class="modal fade" id="alert" tabindex="-1" role="dialog"  aria-hidden="true">
-        <div class="modal-dialog modal-md">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel"></h5>
-            <a type="button" class="close" aria-label="Close" href="index.html">
-                <span aria-hidden="true">&times;</span>
-            </a>
-            </div>
-            <div class="modal-body">
-                You are not logged in..Please login first
-            </div>
-            <div class="modal-footer">
-            <a type="button" class="btn btn-primary" href="loginRegistration.html">Sign In</a>
+    <body>
+        <div
+            class="modal fade"
+            id="alert"
+            tabindex="-1"
+            role="dialog"
+            aria-hidden="true"
+        >
+            <div class="modal-dialog modal-md">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel"></h5>
+                        <a
+                            type="button"
+                            class="close"
+                            aria-label="Close"
+                            href="index.html"
+                        >
+                            <span aria-hidden="true">&times;</span>
+                        </a>
+                    </div>
+                    <div class="modal-body">
+                        You are not logged in..Please login first
+                    </div>
+                    <div class="modal-footer">
+                        <a
+                            type="button"
+                            class="btn btn-primary"
+                            href="loginRegistration.html"
+                            >Sign In</a
+                        >
+                    </div>
+                </div>
             </div>
         </div>
-        </div>
-    </div>
 
-    <div class="modal fade" id="tags" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-md">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-12">
-                                <h6 class="text-dark-custom">Add or change tags (up to 5)<br> so readers know what your story is about.</h6>
-                                <textarea class="input-title" style="border-bottom: 1px solid black;"  id="tagsList"></textarea>
-                                <a class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3" id="publishBtn" href="index.html">Publish</a>
+        <div class="modal fade" id="tags" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-md">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12">
+                                    <h6 class="text-dark-custom">
+                                        Add or change tags (up to 5)<br />
+                                        so readers know what your story is
+                                        about.
+                                    </h6>
+                                    <textarea
+                                        class="input-title"
+                                        style="border-bottom: 1px solid black"
+                                        id="tagsList"
+                                    ></textarea>
+                                    <a
+                                        class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3"
+                                        id="publishBtn"
+                                        >Publish</a
+                                    >
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="fixed-top navbar-collapse justify-content-end pb-4 pb-md-0" id="navbar">
-            <a  href="index.html" class="navbar-brand font-weight-bold mr-auto font-heading-custom">Medium Clone</a>
-            <ul class="nav navbar-nav  mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <button class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0" data-toggle="modal" data-target="#tags" type="button">Publish</button>
-                </li>
-                <li class="d-flex align-items-baseline" id="navbarRight">
-                    <a class="nav-link text-dark mr-4" href="loginRegistration.html">Sign in</a>
-                    <a class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0" href="loginRegistration.html">Get Started</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-
-    <div id="dummyDivForMargin"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-10 offset-1">
-                <input class="input-title" type="text" placeholder="Title" id="title">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div
+                class="fixed-top navbar-collapse justify-content-end pb-4 pb-md-0"
+                id="navbar"
+            >
+                <a
+                    href="index.html"
+                    class="navbar-brand font-weight-bold mr-auto font-heading-custom"
+                    >Medium Clone</a
+                >
+                <ul class="nav navbar-nav mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <button
+                            class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0"
+                            data-toggle="modal"
+                            data-target="#tags"
+                            type="button"
+                        >
+                            Publish
+                        </button>
+                    </li>
+                    <li class="d-flex align-items-baseline" id="navbarRight">
+                        <a
+                            class="nav-link text-dark mr-4"
+                            href="loginRegistration.html"
+                            >Sign in</a
+                        >
+                        <a
+                            class="btn btn-lg big-button text-white background-success-custom align-center small-button mt-3 mt-md-0"
+                            href="loginRegistration.html"
+                            >Get Started</a
+                        >
+                    </li>
+                </ul>
             </div>
-            <div class="col-10 offset-1">
-                <textarea class="input-body" type="textarea" placeholder="Tell your story..." autofocus=true id="content"></textarea>
+        </nav>
+
+        <div id="dummyDivForMargin"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-10 offset-1">
+                    <input
+                        class="input-title"
+                        type="text"
+                        placeholder="Title"
+                        id="title"
+                    />
+                </div>
+                <div class="col-10 offset-1">
+                    <textarea
+                        class="input-body"
+                        type="textarea"
+                        placeholder="Tell your story..."
+                        autofocus="true"
+                        id="content"
+                    ></textarea>
+                </div>
             </div>
         </div>
-    </div>
 
-
-    
-    <script type="module" src="./js/writeBlog.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-</body>
+        <script type="module" src="./js/writeBlog.js"></script>
+        <script
+            src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
