location redirect after login fix

--- a/topicBlogs.html
+++ b/topicBlogs.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>
-        <div class="p-5 background-black-custom"></div>
+        <div class="p-5 background-black-custom" style="margin-top: 60vh"></div>
         <script src="js/topicBlogs.js" type="module"></script>
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
